k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nmna-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nmna-mysql
  template:
    metadata:
      labels:
        app: nmna-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
