k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: numenera-api
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: numenera-api
