k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nmna-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: nmna-mysql
  type: ClusterIP
